# pcbview

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  NOTICE.md  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
assets/: icons.qrc  pcbview.rc
installer/: pcbview.iss
packaging/winget/: README.md
packaging/winget/manifests/d/DavidJanice/pcbview/1.17.1/: DavidJanice.pcbview.installer.yaml  DavidJanice.pcbview.locale.en-US.yaml  DavidJanice.pcbview.yaml
shaders/: bloom_composite.frag  bloom_extract.frag  board.frag  board.vert  board_rt.frag  fullscreen.vert  overlay.vert  pathtrace.comp  tonemap.frag
src/: main.cpp
src/app/: collapsible_dock.h  component_import.cpp  component_import.h  main_window.cpp  main_window.h  settings.cpp  settings.h  theme.cpp  theme.h  viewer.cpp  viewer.h  vulkan_window.cpp  vulkan_window.h
src/geom/: connectivity.cpp  connectivity.h  layer_art.h  tessellate.cpp  tessellate.h
src/io/: obj_export.cpp  obj_export.h  sexpr.cpp  sexpr.h  shapes.h
src/io/altium/: altium_pcb.cpp  altium_pcb.h
src/io/gerber/: gerber_parser.cpp  gerber_parser.h  gerber_project.cpp  gerber_project.h
src/io/ipc2581/: ipc2581.cpp  ipc2581.h
src/io/ipc356/: ipc356.cpp  ipc356.h
src/io/kicad/: kicad_importer.cpp  kicad_importer.h
src/io/odb/: odb_eda.cpp  odb_eda.h  odb_features.cpp  odb_features.h  odb_fs.cpp  odb_fs.h  odb_matrix.cpp  odb_matrix.h  odb_project.cpp  odb_project.h
src/model/: board.cpp  board.h  validate.cpp  validate.h
src/render/common/: device.cpp  device.h
src/render/cpu/: cpu_tracer.cpp  cpu_tracer.h
src/render/soft/: preview.cpp  preview.h
src/render/vk/: renderer.cpp  renderer.h
src/text/: newstroke_data.h  stroke_text.cpp  stroke_text.h
src/video/: mf_encoder.cpp  mf_encoder.h
tests/: pcbview_tests.cpp
tests/corpus/: README.md
tests/corpus/pic-programmer-2581/: pic_programmer.xml
tests/corpus/pic-programmer-gerber/: pic_programmer-B_Adhesive.gba  pic_programmer-B_Mask.gbs  pic_programmer-B_Silkscreen.gbo  pic_programmer-Edge_Cuts.gm1  pic_programmer-F_Adhesive.gta  pic_programmer-F_Mask.gts  pic_programmer-F_Silkscreen.gto  pic_programmer-Margin.gbr  pic_programmer-bottom_layer.gbl  pic_programmer-job.gbrjob  pic_programmer-top_layer.gtl  pic_programmer.drl
tests/corpus/stickhub-odb/matrix/: matrix
tests/corpus/stickhub-odb/misc/: info
tests/corpus/stickhub-odb/steps/pcb/: profile
tests/corpus/stickhub-odb/steps/pcb/eda/: data
tests/corpus/stickhub-odb/steps/pcb/layers/b.courtyard/: features
tests/corpus/stickhub-odb/steps/pcb/layers/b.cu/: attrlist  features
tests/corpus/stickhub-odb/steps/pcb/layers/b.fab/: features
tests/corpus/stickhub-odb/steps/pcb/layers/b.mask/: features
tests/corpus/stickhub-odb/steps/pcb/layers/b.paste/: features
tests/corpus/stickhub-odb/steps/pcb/layers/b.silkscreen/: features
tests/corpus/stickhub-odb/steps/pcb/layers/comp_+_bot/: components
tests/corpus/stickhub-odb/steps/pcb/layers/comp_+_top/: components
tests/corpus/stickhub-odb/steps/pcb/layers/dielectric_1/: attrlist
tests/corpus/stickhub-odb/steps/pcb/layers/drill_non-plated_f.cu-b.cu/: features  tools
tests/corpus/stickhub-odb/steps/pcb/layers/drill_plated_f.cu-b.cu/: features  tools
tests/corpus/stickhub-odb/steps/pcb/layers/edge.cuts/: features
tests/corpus/stickhub-odb/steps/pcb/layers/f.courtyard/: features
tests/corpus/stickhub-odb/steps/pcb/layers/f.cu/: features
tests/corpus/stickhub-odb/steps/pcb/layers/f.fab/: features
tests/corpus/stickhub-odb/steps/pcb/layers/f.mask/: attrlist  features
tests/corpus/stickhub-odb/steps/pcb/layers/f.paste/: features
tests/corpus/stickhub-odb/steps/pcb/layers/f.silkscreen/: features
tests/corpus/stickhub-odb/steps/pcb/layers/user.comments/: features
tests/corpus/stickhub-odb/steps/pcb/layers/user.drawings/: features
tests/corpus/stickhub-odb/steps/pcb/netlists/cadnet/: netlist
tests/corpus/synthetic-9x5/: edge.gbr  holes.drl  l1.gbr  l2.gbr
